# open_genes_test_task

./: .bumpversion.cfg  .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  fill_db.py  pandas_query.ipynb  pyproject.toml  sql_app.db
migrations/: env.py
migrations/versions/: 0a8951af8b54_create_database.py
src/: __main__.py
src/bio_stats_service/: create_app.py  settings.py
src/bio_stats_service/api/: app_status.py
src/bio_stats_service/api/v1/statistics/: core.py  schemes.py  views.py
test_data/: mice_data.csv  worms_data.csv
tests/: conftest.py
tests/api/: test_ping.py
