[tool.poetry]
name = "bio_stats_service"
version = "0.0.1"
description = "A description of the package"
authors = ["redacted <test@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.11.8"
pydantic = { extras = ["dotenv"], version = "^1.6.1" }
loguru = "^0.5.3"
SQLAlchemy = {version = "^1.4.23", allow-prereleases = true}
PyMySQL = "^1.0.2"
cryptography = "^3.4.8"
alembic = "^1.7.1"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
bumpversion = "^0.5.3"
flake8 = "^3.7"
mypy = "^0.761"
rope = "^0.16.0"
bandit = "^1.6.2"
pytest = "^6.0.1"
python-dateutil = "^2.8.1"
pytest-cov = "^2.10.1"
tqdm = "^4.54.1"
isort = "^5.7.0"
flake8-eradicate = "^1.0.0"
flake8-print = "^4.0.0"

[tool.pylint.messages_control]
disable = [
    "relative-beyond-top-level",
    "format", # handled by black
    "invalid-name",
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
